- random rotation obb; - set many obstacles; - hint text;

--- a/QuadTreeDemo/QuadTreeDemo.rc
+++ b/QuadTreeDemo/QuadTreeDemo.rc
@@ -165,11 +165,13 @@ BEGIN
     BUTTON      ID_EDIT_LMBCIRCLE
     BUTTON      ID_EDIT_LMBRECT
     SEPARATOR
+    BUTTON      ID_TESTOBST
+    SEPARATOR
+    BUTTON      ID_CLEARALLBTN
+    SEPARATOR
     BUTTON      ID_INTERSECTBTN
     SEPARATOR
     BUTTON      ID_SHOWLOGS
-    SEPARATOR
-    BUTTON      ID_TESTOBST
     SEPARATOR
     BUTTON      ID_APP_ABOUT
 END
